Force scrollbar to always show to prevent page width changing
Having the page content dance about when switching between pages just
because one has a scrollbar and the other doesn't is annoying, so just
force the scrollbar to show all of the time to avoid this.

--- a/layerindex/static/css/additional.css
+++ b/layerindex/static/css/additional.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 .top-padded { 
     padding-top: 65px; 
 }
@@ -179,3 +183,6 @@ padding: 8px;
     margin-top: 2px;
 }
 
+.breadcrumb {
+    background-color: transparent;
+}
